--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -1,6 +1,6 @@
 The use of catalysts has several advantages such as faster, selective, and more energy-efficient chemical reactions, directed towards producing higher amounts of the desired product while reducing unwanted byproducts.
-Over the years, scientists have developed specialised catalysts for various real-world applications, today \qty{90}{\percent} of chemical processes involve catalysts in at least one of their steps \parencite{WEINER1998915, DeVries2012}.
-Notable advancements in catalysis have led to the production of biodegradable plastics, novel pharmaceuticals, and eco-friendly fuels and fertilisers \parencite{FECHETE20122}.
+Over the years, scientists have developed specialised catalysts for various real-world applications, today \qty{90}{\percent} of chemical processes involve catalysts in at least one of their steps \parencite{Weiner1998, DeVries2012}.
+Notable advancements in catalysis have led to the production of biodegradable plastics, novel pharmaceuticals, and eco-friendly fuels and fertilisers \parencite{Fechete2012}.
 
 \begin{figure}[!htb]
     \centering
@@ -12,12 +12,12 @@ Notable advancements in catalysis have led to the production of biodegradable pl
 \end{figure}
 
 Several new challenges have emerged in the field of catalysis related to improving efficiency, reducing environmental impact, and developing sustainable processes.
-First, environmental challenges concern minimising and/or managing by-products, reducing contamination in effluents/wastewaters, and using sustainable sources of raw materials \parencite{LUDWIG2017, Lange2021} and energy supplies.
+First, environmental challenges concern minimising and/or managing by-products, reducing contamination in effluents/wastewaters, and using sustainable sources of raw materials \parencite{Ludwig2017, Lange2021} and energy supplies.
 Secondly, economical challenges imply using cheaper, readily available raw materials, increased productivity, and decreased lag-time between discovery to commercialisation \parencite{Keisuke2019, Gunay2021}.
 For example, recent studies suggest that alternative, more economical catalysts, such as non-noble metals \parencite{Zhong2021} and other derived metal-based compounds, need to be tested as possible substitutes for the most frequently used noble metals, which are very efficient but expensive.
 
-Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{AHMAD2015599}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
-Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxic gases and nanoparticles \parencite{WHOAirPollution, HECK2001, GANDHI2003}.
+Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{Ahmad2015}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
+Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxic gases and nanoparticles \parencite{WHOAirPollution, Heck2001, Gandhi2003}.
 Some of the major air pollutants such as nitrogen oxides, (\ce{NO_x}), and particulate matter (PM) are emitted by road traffic (\qty{65}{\percent} of \ce{NO_x}, \qty{\approx 35}{\percent} of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhabitants.
 To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to \nitrogendioxide concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the World Health Organisation (WHO) recommendations for PM$_{2.5}$ \parencite{AirParis}.
 Air quality is the main environmental concern of Ile-de-France residents (\qty{65}{\percent} of total mentions) ahead of climate change (\qty{63}{\percent}) and food (\qty{38}{\percent} - \cite{AirParis}).
@@ -78,8 +78,7 @@ Known side reactions to the oxidation of ammonia are first the recombination of 
     2 \nitricoxide (g) & \rightarrow \nitrogen (g) + \dioxygen (g)
 \end{align}
 
-Reactions \ref{eq:AmmoniaOxidationNitrogen}, \ref{eq:AmmoniaOxidationNitrousOxide}, \ref{eq:AmmoniaOxidationNitricOxide} and \ref{eq:SideReactions1} are strongly exothermic, leading to a significant increase of the catalyst temperature during the reaction \parencite{Hatscher2008}.
-
+Reactions \ref{eq:AmmoniaOxidationNitrogen}, \ref{eq:AmmoniaOxidationNitrousOxide}, \ref{eq:AmmoniaOxidationNitricOxide} and \ref{eq:SideReactions1} are strongly exothermic, leading to a significant increase of the catalyst temperature during the reaction \parencite{PerezRamirez2004, Hatscher2008}.
 
 \subsection{The importance of heterogeneous catalysis}\label{sec:AmoOxiHC}
 
@@ -103,7 +102,7 @@ Hence, important selectivity towards the production of \nitricoxide must be achi
 However, at low temperature or in the absence of catalyst, the production of \nitrogen is favoured (eq. \ref{eq:AmmoniaOxidationNitrogen} - \cite{Hatscher2008}).
 
 Since the 1930s, the presence of a platinum-rhodium (\qty{\approx 10}{\percent} Rh) knitted gauzes catalyst and favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a \qty{98}{\percent} \nitricoxide yield to be achieved \parencite{Handforth1934, Heck1982}.
-The reaction pathways has been proven to follow a step-by-step decomposition of ammonia on the catalyst surface by stripping the hydrogen atoms of adsorbed ammonia by dissociated surface oxygen atoms, which confirms the existence of a heterogeneous catalytic process \parencite{Bradley1995,PEREZRAMIREZ2004}.
+The reaction pathways has been proven to follow a step-by-step decomposition of ammonia on the catalyst surface by stripping the hydrogen atoms of adsorbed ammonia by dissociated surface oxygen atoms, which confirms the existence of a heterogeneous catalytic process \parencite{Bradley1995,PerezRamirez2004}.
 The final pathway towards the production of \nitrogen, \nitrousoxide or \nitricoxide depends on the oxygen density and binding on the surface.
 HAVE TO DETAIL MORE HERE
 
@@ -118,7 +117,7 @@ If, as illustrated in fig. \ref{fig:FertilizerWID}, nitrogen-based fertilisers h
 Fertilisers can be either ammonium- or nitrate-based, when plants don't fully absorb all the nutrients, a series of microbe-mediated transformations occur (CHECK).
 These processes lead to the release of nitrogen back into the atmosphere, primarily as nitrogen gas (\nitrogen) and, to a lesser extent, as \nitrousoxide.
 Moreover, nitrogen-based fertilisers and other human activities can lead to nitrogen runoff into water bodies, contributing to eutrophication (excessive growth of algae) and causing harm to aquatic ecosystems (tab. \ref{tab:NitrogenGases}).
-Approximately half of the production of ammonia is lost to the environment \parencite{ERISMAN2007}
+Approximately half of the production of ammonia is lost to the environment \parencite{Erisman2007}
 
 \begin{figure}[!htb]
     \centering
@@ -164,8 +163,8 @@ To be able to drive the reaction, the impact of each parameter \textit{at releva
         Nitrogen based molecules that are involved in the oxidation of ammonia, \\
         the Haber-Bosch process, the Ostwald process or nitrogen-based fertilisers.\\
         Information compiled from various sources: \\
-        \cite{Thiemann2000, HARRISON2001, Baerns2005, Imbihl2007, Hatscher2008}, \\
-        \cite{Davidson2009, Resta2020a,Borodin2021,Pottbacker2022}
+        \cite{Thiemann2000, Harrison2001, Baerns2005, Imbihl2007, Hatscher2008}, \\
+        \cite{Davidson2009, Resta2020a, Borodin2021, Pottbacker2022}
     }
     \label{tab:NitrogenGases}
 \end{table}
