--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -405,7 +405,7 @@ On one hand, in real space, the crystal electronic density can be formed by repe
 This representation captures the periodicity and arrangement of the crystal.
 
 On the other hand, in reciprocal space (Fourier space), the crystal scattering factor $F_{crystal}$ is the Fourier transform of the electronic density.
-According to the convolution theorem, the Fourier transform of a convolution is equal to the product of the Fourier transforms of the individual functions \parencite{MCALISTER2003629}.
+According to the convolution theorem, the Fourier transform of a convolution is equal to the product of the Fourier transforms of the individual functions \parencite{Mcalister2003}.
 The scattering factor can therefore be expressed as the product of the Fourier transforms of the lattice and unit cell functions.
 These Fourier transforms are known as the lattice factor $F_{lat}$ and the unit cell structure factor $F_{uc}$.
 
