--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -9,4 +9,6 @@ Nevertheless, the evolution of Pt nanoparticles during a temperature ramp from \
 The importance of probing different nanoparticles before drawing a conclusion to their global behaviour was also put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{Ar} and \ammonia.
 The role of different facets in the stability of the particle was shown.
 
+If the oxidation of ammonia was never before studied using BCDI, the exposition of platinum nanoparticles to oxygen has been probed first by Fernandez et al. \cite*{Fernandez2019} which showed that it coincided with an increase of the
+
 An upgraded beamline could allow future BCDI studies of the oxidation of ammonia, revealing the 3D structural dynamics of the hysteresis cycle identified on single crystal by \cite{Resta2020a}, or give additional detail regarding the presence of surface oxides on specific facets, as seen in the next chapter.
