--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -17,12 +17,12 @@ Recent studies have shown that nanoparticle surface strain can be controlled, op
 
 % sxrd
 It is first intended to measure the total signal scattered from \ce{Al_2O_3}-supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline of synchrotron SOLEIL.
-At grazing incidences the beam footprint extends across the whole sample length, the scattered beam being then proportional to the ensemble behaviour of the nanoparticles \parencite{Nolte2008, Hejral2013}.
+At grazing incidences the beam footprint extends across the whole sample length, the scattered beam being then proportional to the ensemble behaviour of the nanoparticles \parencite{Nolte2008, Hejral2013, Hejral2016}.
 
 As seen in sec. \ref{sec:SXRD}, truncated surfaces such as facets give rise to crystal truncation rods (CTR) in the reciprocal space, whose intensity as a function of the scattering vector and width in reciprocal space are related to the facet size, roughness and strain.
 
 The average nanoparticle shape and structure will be probed by studying the intensity of crystal truncation rods in directions perpendicular to the expected facets on the nanoparticle surface.
-Prior experiments with similar samples \parencite{Dupraz2017, Li2020, Lim2021, Dupraz2022} have shown that the particles exhibit a Winterbottom shape \parencite{WINTERBOTTOM1967, Boukouvala2021}, typical of nanoparticles epitaxied on a substrate, with mainly \{111\}, \{110\}, and \{100\} facets, and a [111] orientation perpendicular to the substrate.
+Prior experiments with similar samples \parencite{Dupraz2017, Li2020, Lim2021, Dupraz2022} have shown that the particles exhibit a Winterbottom shape \parencite{Winterbottom1967, Boukouvala2021}, typical of nanoparticles epitaxied on a substrate, with mainly \{111\}, \{110\}, and \{100\} facets, and a [111] orientation perpendicular to the substrate.
 
 By having the incident beam illuminating all of the particles, the CTR signal in e.g. the [111] direction will be the sum of the contribution from the [111] facet of every illuminated nanoparticle (as well as their [$\bar{1}\bar{1}\bar{1}$] facets).
 Therefore, phenomena inducing structural change such as particle re-faceting/reshaping at a given condition are expected to be visible by an evolution of the different CTR.
@@ -30,9 +30,9 @@ Therefore, phenomena inducing structural change such as particle re-faceting/res
 % bcdi
 To obtain a more detailed picture of the phenomena at play, surface x-ray diffraction which provides ensemble-averaged properties when studying nanoparticles will be followed by the use of another technique which will bring information on the structural behaviour of single nanoparticles.
 
-With Bragg coherent diffraction imaging (BCDI), the individual three-dimensional (3D) structural response of isolated nanoparticles to changes in the gas mixtures will be measured under \textit{in situ} and \textit{operando} conditions, enabling us to probe more deeply the structure evolution during heterogeneous catalytic reactions \parencite{Hejral2016, Abuin2019, Fernandez2019, Kawaguchi2019, Passos2020, Chung2021, Kim2021, Dupraz2022} or during the exposition to single gases
+With Bragg coherent diffraction imaging (BCDI), the individual three-dimensional (3D) structural response of isolated nanoparticles to changes in the gas mixtures will be measured under \textit{in situ} and \textit{operando} conditions, enabling us to probe more deeply the structure evolution of single facets during heterogeneous catalytic reactions (sec. \ref{sec:FacetAnalysis}).
 
-A careful in situ analysis of the properties of the nanoparticles (size, shape, strain, re-faceting, support, interaction, oxide formation, etc) in 3D during the oxidation of ammonia is of essential importance to gain more understanding of the behaviour of these nanocrystals during a catalytic reaction.
+A careful in situ analysis of the properties of the nanoparticles (size, shape, strain, re-faceting, support interaction, oxide formation, etc.) in 3D during the oxidation of ammonia is of essential importance to gain more understanding of the behaviour of these nanocrystals during a catalytic reaction.
 
 However, it must be ensured that the nanoparticles do not move or change their epitaxial relationship with the substrate during the exposition to reacting conditions at high temperatures.
 Therefore, the preceding SXRD experiment will also aim at resolving the evolution of the epitaxial relationship between the Pt nanoparticles and the \ce{Al_2O_3} substrate before measuring single nanoparticles with Bragg coherent diffraction imaging, during which the beam is reduced to micrometric size, and for which a movement of the nanoparticles prevents the measurements of rocking curves due to loss of alignment.
