--- a/Sections/4_Results_SingleCrystals/100.tex
+++ b/Sections/4_Results_SingleCrystals/100.tex
@@ -76,7 +76,7 @@ Corresponding interplanar spacings were computed from the position of the peaks,
     \label{fig:FitPt100LScans}
 \end{figure}
 
-Bulk \ce{Pt_3O_4} was reported to crystallise in a simple cubic structure with a lattice parameter equal to \qty{5.65}{\angstrom} \parencite{Galloni1941, Galloni1952, MULLER1968}, more recent studies have proposed a theoretical value of \qty{5.59}{\angstrom} \parencite{Seriani2006}, already presented in tab. \ref{tab:PtOxides}, similarly to the parameters reported in this study.
+Bulk \ce{Pt_3O_4} was reported to crystallise in a simple cubic structure with a lattice parameter equal to \qty{5.65}{\angstrom} \parencite{Galloni1941, Galloni1952, Muller1968}, more recent studies have proposed a theoretical value of \qty{5.59}{\angstrom} \parencite{Seriani2006}, already presented in tab. \ref{tab:PtOxides}, similarly to the parameters reported in this study.
 The 3D structure of bulk \ce{Pt_3O_4} is presented in fig. \ref{fig:Pt3O4}.
 It is not yet clear why the (212) and (232) peaks are missing from the out-of-plane measurements.
 
@@ -159,7 +159,7 @@ It is possible that the (10x10)-type reconstructions observed in the current exp
 Lowering the partial pressure of oxygen from \qty{80}{\milli\bar} to \qty{5}{\milli\bar} in the reactor has completely removed the square (10x10) reconstruction phenomena and revealed the existence of two hexagonal arrangements on top on the Pt (100) surface (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}), with an in-plane lattice parameter equal to \qty{2.685}{\angstrom}, \qty{\approx 3.36}{\percent} lower than the distance between neighbouring Pt atoms on the Pt (100) surface.
 Second order peaks can also be seen at the edge of the reciprocal space map, each domain has one axis parallel to either $\vec{a}_{(100)}$ or $\vec{b}_{(100)}$, \textit{i.e.} respectively in the [110] and [1-10] directions.
 
-Different hexagonal surface reconstructions on the Pt (100) surface have been reported also in the [110] direction at UHV conditions, summarised in \cite{Hammer2016}, based on an important body of work \parencite{Heilmann1979, VANHOVE1981, Heinz1982, Mase1992, Kuhnke1992, Borg1994, VanBeurden2004, Havu2010}, evolving to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature and on the previous temperature treatment.
+Different hexagonal surface reconstructions on the Pt (100) surface have been reported also in the [110] direction at UHV conditions, summarised in \cite{Hammer2016}, based on an important body of work \parencite{Heilmann1979, Vanhove1981, Heinz1982, Mase1992, Kuhnke1992, Borg1994, VanBeurden2004, Havu2010}, evolving to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature and on the previous temperature treatment.
 The unit cell describing those reconstructions with respect to the Pt (100) surface varies, if first contained to (5XN) where N = 20–30, the latest study reports a commensurate c(26X118) superstructure.
 Exposition of the rotated hexagonal structure to oxygen at \qty{450}{\degreeCelsius} studied by low energy electron diffraction (LEED) has been found to remove the hexagonal structure and precipitate the growth of surface oxides \textit{via} different phases \parencite{BradleyShumbera2007, BradleyShumbera2007a}, a similar conclusion was reached by \cite{Deskins2005} by DFT studies.
 Exposition to \ce{NO} has been reported to stabilise the clean Pt (100) phase \parencite{Heinz1982}, while exposition to \ce{CO} removes the hexagonal reconstruction, an oscillatory behaviour between a clean (1X1) surface and the rotated hexagonal reconstruction was reported by Cox et al. \parencite*{Cox1983}.
@@ -167,7 +167,7 @@ Exposition to \ce{NO} has been reported to stabilise the clean Pt (100) phase \p
 A (2X2) reconstruction of the Pt (100) surface has been reported at an oxygen pressure of \qty{1e-3}{mbar} by the use of environmental TEM \parencite{Li2016}.
 
 Subsurface oxygen has also been predicted to exist on Pt (100) \parencite{Gu2007}, reported at a pressure of \qty{0.133}{\milli\bar} \parencite{McMillan2005}, and participating in the catalytic oxidation of \ce{CO}.
-Subsurface oxygen was identified as a precursor to a stable surface oxide during the catalytic oxidation of \ce{CO} by Dicke et al. \parencite*{Dicke2000}, at an oxygen pressure of \qty{0.09}{\milli\bar}, its appearance linked to the lifting of surface reconstructions on the clean Pt (100) surface from the adsorption of \ce{CO}, which then allowed oxygen atoms to penetrate under the topmost layer of platinum \parencite{Rotermund1993, LAUTERBACH1994}.
+Subsurface oxygen was identified as a precursor to a stable surface oxide during the catalytic oxidation of \ce{CO} by Dicke et al. \parencite*{Dicke2000}, at an oxygen pressure of \qty{0.09}{\milli\bar}, its appearance linked to the lifting of surface reconstructions on the clean Pt (100) surface from the adsorption of \ce{CO}, which then allowed oxygen atoms to penetrate under the topmost layer of platinum \parencite{Rotermund1993, Lauterbach1994}.
 
 Overall, few works at ambient pressure have been found to exist, even less during the catalytic oxidation of ammonia.
 Out-of-plane measurements were performed perpendicular to two peaks, also presented in fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}, no bulk structure could be detected.
