--- a/Sections/4_Results_SingleCrystals/111.tex
+++ b/Sections/4_Results_SingleCrystals/111.tex
@@ -97,7 +97,7 @@ Four different bulk platinum oxides have been reported to exist in literature, $
     \end{tabular}%
     %}
     \caption{
-    Experimental values taken from \cite{McBride1991} for \ce{PtO}, from \cite{MULLER1968} for \ce{Pt_3O_4} and $\alpha$-\ce{PtO_2}, and from \cite{Weber1990} for $\beta$-\ce{PtO_2}.
+    Experimental values taken from \cite{McBride1991} for \ce{PtO}, from \cite{Muller1968} for \ce{Pt_3O_4} and $\alpha$-\ce{PtO_2}, and from \cite{McBride1991} for $\beta$-\ce{PtO_2}.
     Theoretical values and table adapted from \cite{Seriani2006}.
     }
 \label{tab:PtOxides}
@@ -105,11 +105,11 @@ Four different bulk platinum oxides have been reported to exist in literature, $
 
 The lack of peaks at $L=0$ in fig. \ref{fig:LScans80} for the (8X8) hexagonal structure shows that there is no bulk structure on the catalyst surface.
 However, Seriani et al. \parencite*{Seriani2006} have also found that the most stable surface oxide on the Pt (111) surface is expected to be hexagonal $\alpha$-\ce{PtO_2}.
-A high uncertainty regarding the lattice parameter in the $\vec{c}$ direction is reported in experimental and theoretically studies due to a poor crystallisation of the bulk oxide \parencite{MULLER1968}, and to underestimation of weak interlayer Van der Waals forces in theoretical studies \parencite{LI2005}.
+A high uncertainty regarding the lattice parameter in the $\vec{c}$ direction is reported in experimental and theoretically studies due to a poor crystallisation of the bulk oxide \parencite{Muller1968}, and to underestimation of weak interlayer Van der Waals forces in theoretical studies \parencite{Li2005}.
 
 The formation of hexagonal on hexagonal surface $\alpha$-\ce{PtO_2} on Pt (111) is expected to induce a high amount of in-plane compressive strain in the oxide layer from the large difference between the Pt-Pt distance on the (111) surface (\qty{2.775}{\angstrom}) and the in-plane lattice parameter of $\alpha$-\ce{PtO_2} (\qty{3.14}{\angstrom}).
 A rotation of \ang{30} is expected to reduce the in-plane strain, resulting in a (2X2) arrangement.
-The presence of $\alpha$-\ce{PtO_2} on the Pt (111) surface was also shown to provide favourable special sites that could contribute to the catalytic activity \parencite{LI2005}.
+The presence of $\alpha$-\ce{PtO_2} on the Pt (111) surface was also shown to provide favourable special sites that could contribute to the catalytic activity \parencite{Li2005}.
 The 3D structure of bulk $\alpha$-PtO$_2$ is presented in fig. \ref{fig:AlphaPtO2}.
 
 \begin{SCfigure}
@@ -144,7 +144,7 @@ The two $L$-scans performed in the current study were fitted using two Gaussian 
 
 Aa peak at [-0.89, 0, 0.65] is reported, but using the Pt (111) surface unit cell, with an out-of-plane lattice parameter equal to \qty{6.797}{\angstrom}, incompatible with the results presented in Ellinger et al \parencite*{Ellinger2008}.
 It seems that a different out-of-plane structure is present for the $\alpha$-\ce{PtO_2} surface oxide in this study.
-Additional simulations are needed to fully understand the structures present in this study, with different surface models including the \textit{spoked-wheel} superstructure identified \textit{via} scanning tunnelling microscopy (STM) by \cite{VanSpronsen2017, Boden2022}, and the different surface oxides identified by Miller et al \parencite*{Miller2011, Miller2014}, Fantauzzi et al \parencite*{Fantauzzi2017}, as well as Farkas et al. \parencite*{FARKAS2017}, for some at similar temperature and oxygen partial pressures, respectively \qty{6.66}{\milli\bar} of \ce{O_2} at \qty{450}{\degreeCelsius} and \qty{1}{\milli\bar} of oxygen between \qty{160}{\degreeCelsius} and \qty{410}{\degreeCelsius}.
+Additional simulations are needed to fully understand the structures present in this study, with different surface models including the \textit{spoked-wheel} superstructure identified \textit{via} scanning tunnelling microscopy (STM) by \cite{VanSpronsen2017, Boden2022}, and the different surface oxides identified by Miller et al \parencite*{Miller2011, Miller2014}, Fantauzzi et al \parencite*{Fantauzzi2017}, as well as Farkas et al. \parencite*{Farkas2017}, for some at similar temperature and oxygen partial pressures, respectively \qty{6.66}{\milli\bar} of \ce{O_2} at \qty{450}{\degreeCelsius} and \qty{1}{\milli\bar} of oxygen between \qty{160}{\degreeCelsius} and \qty{410}{\degreeCelsius}.
 \textcolor{Important}{which one...}
 
 \begin{figure}[!htb]
