--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -28,9 +28,9 @@ Most commonly, the catalyst is in the solid phase, while the reactants are in ei
 This distinction sets heterogeneous catalysis apart from homogeneous catalysis, where the catalyst and reactants are in the same phase.
 One of the key advantages of heterogeneous catalysis is the ease of catalyst separation and reuse.
 Since the catalyst is in a different phase, it can be easily separated from the reaction mixture once the reaction is complete.
-This makes the catalyst recyclable and economically attractive for industrial processes \parencite{FECHETE20122}.
+This makes the catalyst recyclable and economically attractive for industrial processes \parencite{Fechete2012}.
 
-There are a few key parameters to take into account when comparing the efficiency and performance between different catalysts \parencite{Boudart1995, ZHANG2019, WACHS2022}.
+There are a few key parameters to take into account when comparing the efficiency and performance between different catalysts \parencite{Boudart1995, Zhang2019, Wachs2022}.
 The \textit{turnover frequency} (TOF) refers to the number of reactant molecules catalysed into product molecules by a single catalyst site per unit of time, expressed in units of moles of product formed per second per mole of active catalyst site, it is an indicator of the catalyst activity.
 The \textit{turnover number} (TON) refers to the total number of reactant molecules that are converted into product molecules by a single catalyst site over the entire course of a reaction, and provides a measure of the catalyst's overall \textit{activity} and \textit{stability} before deactivation.
 Finally, the \textit{selectivity} of the catalyst refers to its ability to favour the formation of a specific product or products over undesired products.
@@ -54,9 +54,9 @@ Moreover, if the adsorption is too strong, the product of the reaction is not ab
 \end{figure}
 
 In a founding study in \cite*{Langmuir1922}, Langmuir detailed the possible mechanisms of actions for heterogeneous catalysis.
-When studying bi-molecular reactions, the Langmuir–Hinshelwood and Elley-Rideal mechanisms are two main mechanisms of interest \parencite{catal12101134}.
+When studying bi-molecular reactions, the Langmuir–Hinshelwood and Elley-Rideal mechanisms are two main mechanisms of interest \parencite{Bratan2022}.
 In the Langmuir–Hinshelwood mechanism, both reactants are adsorbed in nearby sites at the surface of the catalyst, and react on the surface to form the product which is subsequently desorbed from the surface \parencite{Prins2018, ROSS2019}.
-In the Elley–Rideal mechanism, a reactant in the gas phase comes and interacts with the adsorbed reactant without being itself adsorbed, followed by the desorption of the product \parencite{rideal_1939, Weinberg1996}  (fig. \ref{fig:Mechanisms}).
+In the Elley–Rideal mechanism, a reactant in the gas phase comes and interacts with the adsorbed reactant without being itself adsorbed, followed by the desorption of the product \parencite{Rideal1939, Weinberg1996}  (fig. \ref{fig:Mechanisms}).
 
 % In the third mechanism, an atom from the surface layer of the catalyst reacts with an adsorbed reactant, which creates a vacancy in his original position on the surface when the products is desorbed.
 % The vacancy is then replaced by an atom that comes from from the bulk or the gas phase \parencite{MARS1954, Doornkamp2000}.
@@ -73,9 +73,9 @@ The first step towards the use of these experimental methods is to understand wh
 \subsection{Active sites in heterogeneous catalysis}
 
 Heterogeneous catalysis being a surface process, the tendency is to use small particles which maximise the surface area to volume ratio, increasing the number of available active sites for catalysis \parencite{Vogt2022}.
-This statement is at the origin of the push towards ever smaller samples for heterogeneous catalysis, and at the origin of the increase of interest on nanoparticle catalysis \parencite{CHE1989, Molenbroek2009, vanSanten2010, Schauermann2013}.
-As an example, platinum (Pt) nanoparticles (NPs) are of great interest for the petrochemical industry \parencite{Astruc2005}, fuel cell technology and for automobile exhaust gas purification \parencite{HECK2001}.
-The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle synthesis route, its size, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{WINTERBOTTOM1967, Boukouvala2021}.
+This statement is at the origin of the push towards ever smaller samples for heterogeneous catalysis, and at the origin of the increase of interest on nanoparticle catalysis \parencite{Che1989, Molenbroek2009, VanSanten2010, Schauermann2013}.
+As an example, platinum (Pt) nanoparticles (NPs) are of great interest for the petrochemical industry \parencite{Astruc2005}, fuel cell technology and for automobile exhaust gas purification \parencite{Heck2001}.
+The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle synthesis route, its size, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{Winterbottom1967, Boukouvala2021}.
 The orientation and structure of each facet on the nanoparticle surface can be described by its Miller (hkl) indices.
 Between facets are the nanoparticle edges and corners, notorious for being very favourable adsorption sites due to a low local coordination geometry \parencite{Jiang2009}.
 \cite{CalleVallejo2014}, \cite*{CalleVallejo2018} have used density functional theory (DFT) to show an approximate linear trend between the generalised coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
@@ -110,7 +110,7 @@ The activity of single facets can also be studied with \textit{single crystals},
 A modern theoretical approach to the interaction between surface and adsorbates in heterogeneous catalysis has been proposed by Hammer, Norskov and Mavrikakis \parencite*{Hammer1995, Mavrikakis1998, Hammer2000} for transition metals, which is the main focus of this thesis.
 
 In a crystalline lattice, the energy levels of electrons are so close that they form bands \parencite{Ashcroft76}, the study considers that the energy levels of the \textit{d}-bands in transition metals is responsible for bonding and adsorption in catalytic reactions, the main conclusion being that there is a direct relation between lattice strain, adsorption energy and surface reactivity, which has been confirmed by later studies \parencite{Kitchin2004, Kibler2005, Ontaneda2015}.
-Moreover, d-bands narrowing effect also justifies the difference between bulk, surfaces steps and kinks in terms of reactivity \parencite{Haydock1972, DESJONQUERES1975, EGELHOFF1987, Hammer2006}.
+Moreover, d-bands narrowing effect also justifies the difference between bulk, surfaces steps and kinks in terms of reactivity \parencite{Haydock1972, Desjonqueres1975, Egelhoff1987, Hammer2006}.
 \textcolor{Important}{Check ref CA, also d-band centre ?}
-The application of this work has been demonstrated by Wang et al. in \cite*{Wang2016} and is at the origin of many scientific studies for strain engineering in catalysis, probed with techniques sensitive to the catalyst structure, \textit{i.e} to the lattice strain if the resolution is good enough, such as surface x-ray diffraction \parencite{Resta2020a}, and Bragg coherent diffraction imaging \parencite{Sneed2015, ulvestad_situ_2016, Kim2019, Bjorling2019, Passos2020, Carnis2021a, Carnis2021b, Dupraz2022} in which strain has been proven to impact the catalytic properties of the catalyst.
+The application of this work has been demonstrated by Wang et al. in \cite*{Wang2016} and is at the origin of many scientific studies for strain engineering in catalysis, probed with techniques sensitive to the catalyst structure, \textit{i.e} to the lattice strain if the resolution is good enough, such as surface x-ray diffraction \parencite{Resta2020a}, and Bragg coherent diffraction imaging \parencite{Sneed2015, Ulvestad2016, Kim2019, Bjorling2019, Passos2020, Carnis2021a, Carnis2021b, Dupraz2022} in which strain has been proven to impact the catalytic properties of the catalyst.
 
