--- a/Sections/3_Results_Nanoparticles/SXRDNanoparticles.tex
+++ b/Sections/3_Results_Nanoparticles/SXRDNanoparticles.tex
@@ -122,7 +122,7 @@ The measurement of crystal truncation rods resulting from those facets is the ea
 For that reason, a [111]-oriented crystal truncation rod, identified in fig. \ref{fig:2DCTR111Particles}, was first studied to probe for the evolution of the (111) and ($\bar{1}\bar{1}\bar{1}$) facets.
 
 (11$\bar{1}$) and (002) Bragg peaks can be identified respectively at $q_z \qty{\approx0.8}{\per\angstrom}$ and $q_z \qty{\approx1.8}{\per\angstrom}$.
-Both peaks being visible along the same CTR shows that the nanoparticles do not have the same exact in plane orientation, due to different stacking of the (111) layers along the [111] axis, e.g. ABC or ACB stacking, rotated by \ang{180} \parencite{JONES2019}.
+Both peaks being visible along the same CTR shows that the nanoparticles do not have the same exact in plane orientation, due to different stacking of the (111) layers along the [111] axis, e.g. ABC or ACB stacking, rotated by \ang{180} \parencite{Jones2019}.
 Low intensity CTRs in other directions due to other facets present on the nanoparticles can be seen around both Bragg peaks.
 The peak at $q_z\approx1.45$ corresponds to the (2$\bar{1}$3) Bragg peak from the \ce{Al_2O_3} substrate ($q = \qty{3.014}{\per\angstrom}$, tab. \ref{tab:Reflections}), which is also at the origin of its own CTR in the [111] direction from the surface in contact with the nanoparticles, observed in the out-of-plane map in fig. \ref{fig:2DCTR111Particles}, parallel to the more intense Pt CTR.
 
@@ -147,7 +147,7 @@ Efforts were then focused on resolving the CTR signal around the Bragg peaks com
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/facets/facets_together.pdf}
     \caption{
-        a) Projection perpendicular to $\vec{q}_z$ of a reciprocal space volume measured around the $(002)$ Bragg peak at \qty{300}{\degreeCelsius} under Argon.
+        a) Projection perpendicular to $\vec{q}_z$ of a reciprocal space volume measured around the $(\bar{1}11)$ Bragg peak at \qty{300}{\degreeCelsius} under Argon.
         The three black dotted line are respectively a projection in the $(\vec{q}_x, \vec{q}_y)$ plane of the $[\bar{1}11]$, $[\bar{1}10]$ and $[010]$ directions.
         The red dotted line correspond to a parasite signal linked to the use of attenuators when the detector records the intensity of the Bragg peak.
         b-c) Slices in the $(\vec{q}_y, \vec{q}_z)$ plane after rotation of the $\vec{q}_x$ and $\vec{q}_y$ axis around the $\vec{q}_z$ axis by \ang{30} and \ang{60} to highlight the presence of crystal truncation rods in different directions.
@@ -157,7 +157,8 @@ Efforts were then focused on resolving the CTR signal around the Bragg peaks com
     \label{fig:FacetMaps}
 \end{figure}
 
-A volume of the reciprocal space was collected around the (002) Bragg peak to try to find the direction of the observed facet signals, and to quantify their evolution as a function of the different conditions.
+A volume of the reciprocal space was collected around the ($\bar{1}$11) Bragg peak to try to find the direction of the observed facet signals, and to quantify their evolution as a function of the different conditions.
+Similar experiments have shown the oxygen-induced shape transformation of rhodium \parencite{Nolte2008} or platinum nanoparticles \parencite{Hejral2013}, which was also linked to the presence of surface oxides.
 The data was computed in the q-space with different in-plane offsets, so that each rod observed in fig. \ref{fig:FacetMaps} (a) becomes parallel to the $\vec{q}_x$ direction for a certain in-plane offset, thereby facilitating the data analysis.
 
 Besides the crystal truncation rods, there are two different parasitic signals going through the Bragg peak.
